# picture-486-agent

./: .gitignore  API接口文档.md  Agents.md  langgraph.json  pyproject.toml  requirements.txt
app/: main.py
app/agent/: __init__.py  chat_agent.py  chat_chain.py  output_nodes.py  retrieval_chain.py  routing.py  schemas.py  state.py  system_prompt.py  tool.py  tools.py  workflow.py
app/agent/ai_review/: __init__.py  callback.py  config.py  consumer.py  state.py  workflow.py
app/agent/ai_review/nodes/: __init__.py  content_safety.py  validation.py
app/agent/chain/: routing.py
app/agent/chat/nodes/: direct_chat.py
app/agent/chat/prompts/: chat_prompt.py
app/agent/config/: __init__.py  chroma_config.py  workflow_config.py  workflow_util.py
app/agent/image_analysis/: __init__.py  analyzers.py  config.py  formatters.py  graph.py  routers.py  state.py  upload_analyzer.py  upload_callback.py
app/agent/image_analysis/nodes/: analysis_formatter.py  analysis_router.py  anime_analyzer.py  attraction_analyzer.py  base_agent.py  (+2 more)
app/agent/image_upload/: __init__.py  config.py  state.py
app/agent/model/: model.py
app/agent/models/: chat_llm.py  embedding_llm.py  vision_llm.py
app/agent/prompts/: __init__.py  chat_prompt.py  query_rewrite_prompt.py  response_prompt.py
app/agent/rag/: __init__.py  config.py  state.py
app/api/: chat.py  chat_sse.py  cos.py
app/common/: logger.py
app/config/: redis_config.py
app/entity/: schema.py
app/mcp/: mcp_client.py  mcp_servers.json  server_config.py
app/test/: check_chroma_data.py  test_ai_review.py  test_anime_trace.py  test_api.py  test_chroma.py  test_dimension.py  test_image_analysis_subgraph.py  test_mcp_search.py  test_normal_search.py  test_output_parser.py  test_phase3_specialist_agents.py  test_query.py  test_redis.py  test_response_fix.py  test_sse_chat.js  test_supervisor_agent.py  test_upload_image.py
app/utils/: anime_trace.py  api_utils.py  callback_backend.py  sse_utils.py  vectorize_picture.py
app/utils/vectorize_picture/: test_search.py  vectorize_picture.py
(+10 files in other folders)
