[project]
name = "subarupic-ai"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "booktype>=1.5",
    "chromadb>=1.5.9",
    "cos-python-sdk-v5>=1.9.44",
    "dashscope>=1.25.21",
    "dict>=2018.11.19",
    "fastapi>=0.136.3",
    "langchain>=1.3.4",
    "langchain-classic>=1.0.7",
    "langchain-core>=1.4.1",
    "langchain-deepseek>=1.1.0",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.4,<1.3.0",
    "langgraph-checkpoint>=2.1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langgraph-cli[inmem]>=0.4.27",
    "logger>=1.4",
    "mysql-connector-python>=9.7.0",
    "openai>=2.41.0",
    "pydantic>=2.13.4",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.31.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
